expand-collapse-correction

--- a/src/main-responsive-layout/MainResponsiveLayout.scss
+++ b/src/main-responsive-layout/MainResponsiveLayout.scss
@@ -55,9 +55,7 @@
   font-size: 20px;
 }
 
-.s3-volumechart-title{
-  background-color: greenyellow;
-}
+
 @media only screen and (max-width: 600px) {
   .main-container {
     flex-direction: column;
